# mapped-types changelog

## 1.1.0

- Added cjs and esm build